front end bug fixes
changes PP call to /getallclients
Clients can now access goals only section of their PP
create user now defaults to "password" and a cleaner success message was
added

--- a/WebContent/personalplan/planning.html
+++ b/WebContent/personalplan/planning.html
@@ -134,9 +134,12 @@
 					if(data.verified=="failure") {
 			
 					}else {
-					
-						$("#goalsD").hide();
-						nextNav('lastD');
+						if($.cookie("user_role")=="client") {
+							document.location.reload(true);
+						}else {
+							$("#goalsD").hide();
+							nextNav('lastD');
+						}
 					}				
 				},
 				error: function(jqXHR, textStatus) {
