--- a/WebContent/personalplan/client.html
+++ b/WebContent/personalplan/client.html
@@ -7,8 +7,8 @@
 		<h4>Client Details</h4>
 		<label for='nameT' id='nameL' class='toggle'>Name: </label>
 		<div id='nameD' >
-			<input type='text' name='nameT' id='nameT' />
-			<p class='error' id='nameE' readonly ></p>
+			<input type='text' name='nameT' id='nameT' readonly />
+			<p class='error' id='nameE' ></p>
 		</div>
 		<br />
 		
