checking pp updates and updating the plan meeting

--- a/WebContent/personalplan/education.html
+++ b/WebContent/personalplan/education.html
@@ -86,9 +86,9 @@
 		</div>
 		<br />
 		
-		<label for='contactPersonT' class='toggle'>Supervisor/TDO/Contact Person: </label>
-		<div id='contactPersonD'>
-			<textarea id='contactPersonT' name='contactPersonT' rows="3" cols="50"></textarea>
+		<label class='toggle'>Supervisor/TDO/Contact Person: </label>
+		<div >
+			<textarea id='employmentContactPersonT' name='employmentContactPersonT' rows="3" cols="50"></textarea>
 		</div>
 		<br />
 		
@@ -164,7 +164,7 @@
 			employment.address = $("#addressEmploymentT").val();
 			employment.annualLeave = $("#annualLeaveT").val();
 			employment.arrangements = $("#arrangementsT").val();
-			employment.contactPerson = $("#contactPersonT").val();
+			employment.contactPerson = $("#employmentContactPersonT").val();
 			employment.employer = $("#employerT").val();
 			employment.equipment = $("#equipmentT").val();
 			employment.position = $("#positionT").val();
