Fixed plan meeting page
-Changed meeting search function
-Changed how the new meeting button worked
-Changed the way the user creates a new meeting

--- a/WebContent/planmeeting/meeting.html
+++ b/WebContent/planmeeting/meeting.html
@@ -2,7 +2,9 @@
 		<tr>
 		<td>
 			<label id='serviceIDL' style="font-weight: bold;" >User Service ID: </label>
-			<input type='text' id='serviceID' name='serviceID' readonly />
+<!-- 			<input type='text' id='serviceID' name='serviceID' readonly /> -->
+			<select id='serviceID' name='serviceID'>
+			</select>
 		</td>
 		<td>
 			<label id='meetingDateL' style="font-weight: bold;" >Scheduled Meeting Date</label>
